src/skiacapi/cpp/skiacapi.h

typedef void SkCanvas;
typedef void SkColorSpace;
typedef void SkDocument;
typedef void SkDynamicMemoryWStream;
typedef void SkPaint;
typedef void SkShader;
typedef void SkSVGDOM;
CAPI void SkSVGDOM_setContainerSize(SkSVGDOM* dom, float w, float h);
CAPI bool SkSVGDOM_getViewBox(SkSVGDOM* dom, float box[4]);
CAPI void SkSVGDOM_render(SkSVGDOM* dom, SkCanvas* canvas);
// canvas.cpp

typedef struct Path {
    unsigned char* verbs;
    int verbCount;
    float* points;
    int pointCount;
    bool isEvenOdd;
} Path;
CAPI SkCanvas* SkCanvas_MakeRasterDirect(IMAGE_PARAMETERS);
CAPI SkCanvas* SkSVGCanvas_Make(SkDynamicMemoryWStream* stream, float x, float y, float w, float h);
CAPI void SkCanvas_delete(SkCanvas* canvas);
CAPI SkDocument* SkPDF_MakeDocument(SkDynamicMemoryWStream* stream);
CAPI SkCanvas* SkDocument_beginPage(SkDocument* document, float w, float h);
CAPI void SkDocument_endPage(SkDocument* document);
CAPI void SkCanvas_save(SkCanvas* canvas);
CAPI void SkCanvas_saveLayer(SkCanvas* canvas, bool passBounds, float x, float y, float w, float h, SkPaint* paint);
CAPI void SkCanvas_restore(SkCanvas* canvas);
CAPI void SkCanvas_setMatrix(SkCanvas* canvas, MATRIX23_PARAMETERS);
CAPI void SkCanvas_clipRect(SkCanvas* canvas, float x, float y, float w, float h, bool doAntiAlias);
CAPI void SkCanvas_clipPath(SkCanvas* canvas, Path* path, bool doAntiAlias);
CAPI void SkCanvas_drawPath(SkCanvas* canvas, Path* path, SkPaint* paint);
CAPI void SkCanvas_drawImage(SkCanvas* canvas, IMAGE_PARAMETERS, float x, float y, unsigned char filterMode, SkPaint* paint);
// paint.cpp

CAPI SkPaint* SkPaint_New(void);
CAPI void SkPaint_delete(SkPaint* paint);
CAPI void SkPaint_setAntiAlias(SkPaint* paint, bool antiAlias);
CAPI void SkPaint_setStroke(SkPaint* paint, bool stroke);
CAPI void SkPaint_setStrokeProperties(SkPaint* paint, float width, unsigned char cap, unsigned char join, float miterlimit);
CAPI void SkPaint_setColor(SkPaint* paint, float c1, float c2, float c3, float a, SkColorSpace* colorSpace);
CAPI void SkPaint_setAlpha(SkPaint* paint, float a);
CAPI void SkPaint_setBlendMode(SkPaint* paint, unsigned char blendMode);
CAPI void SkPaint_setDashPathEffect(SkPaint* paint, float intervals[], int count, float phase);
CAPI void SkPaint_setShaderMaskFilter(SkPaint* paint, SkShader* shader);
CAPI void SkPaint_setShader(SkPaint* paint, SkShader* shader);
CAPI void SkPaint_setBlurImageFilter(SkPaint* paint, float sigmaX, float sigmaY);
CAPI SkShader* SkGradientShader_MakeLinear(float x1, float y1, float x2, float y2, float colors[], SkColorSpace* colorSpace, float pos[], int count, unsigned char tileMode, unsigned char interpolationColorSpace);
CAPI SkShader* SkImage_makeShader(IMAGE_PARAMETERS, unsigned char tileModeX, unsigned char tileModeY, unsigned char filterMode, MATRIX23_PARAMETERS);