src/main/java/com/loadingbyte/cinecred/natives/skiacapi/constants$0.java

    static final MethodHandle const$83 = RuntimeHelper.downcallHandle(
        "SkSVGDOM_setContainerSize",
        constants$0.const$82
    );
    static final FunctionDescriptor const$84 = FunctionDescriptor.of(JAVA_BOOLEAN,
        RuntimeHelper.POINTER,
        RuntimeHelper.POINTER
    );
    static final MethodHandle const$85 = RuntimeHelper.downcallHandle(
        "SkSVGDOM_getViewBox",
        constants$0.const$84
    );
    static final MethodHandle const$86 = RuntimeHelper.downcallHandle(
        "SkSVGDOM_render",
        constants$0.const$80
    );
    static final StructLayout const$87 = MemoryLayout.structLayout(
        RuntimeHelper.POINTER.withName("verbs"),
        JAVA_INT.withName("verbCount"),
        MemoryLayout.paddingLayout(4),
        RuntimeHelper.POINTER.withName("points"),
        JAVA_INT.withName("pointCount"),
        JAVA_BOOLEAN.withName("isEvenOdd"),
        MemoryLayout.paddingLayout(3)
    ).withName("Path");
    static final VarHandle const$88 = constants$0.const$87.varHandle(MemoryLayout.PathElement.groupElement("verbs"));
    static final VarHandle const$89 = constants$0.const$87.varHandle(MemoryLayout.PathElement.groupElement("verbCount"));
    static final VarHandle const$90 = constants$0.const$87.varHandle(MemoryLayout.PathElement.groupElement("points"));
    static final VarHandle const$91 = constants$0.const$87.varHandle(MemoryLayout.PathElement.groupElement("pointCount"));
    static final VarHandle const$92 = constants$0.const$87.varHandle(MemoryLayout.PathElement.groupElement("isEvenOdd"));
    static final FunctionDescriptor const$93 = FunctionDescriptor.of(RuntimeHelper.POINTER,
        JAVA_INT,
        JAVA_INT,
        JAVA_BYTE,
        JAVA_BYTE,
        RuntimeHelper.POINTER,
        RuntimeHelper.POINTER,
        JAVA_LONG
    );
    static final MethodHandle const$94 = RuntimeHelper.downcallHandle(
        "SkCanvas_MakeRasterDirect",
        constants$0.const$93
    );
    static final FunctionDescriptor const$95 = FunctionDescriptor.of(RuntimeHelper.POINTER,
        RuntimeHelper.POINTER,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT
    );
    static final MethodHandle const$96 = RuntimeHelper.downcallHandle(
        "SkSVGCanvas_Make",
        constants$0.const$95
    );
    static final MethodHandle const$97 = RuntimeHelper.downcallHandle(
        "SkCanvas_delete",
        constants$0.const$62
    );
    static final MethodHandle const$98 = RuntimeHelper.downcallHandle(
        "SkPDF_MakeDocument",
        constants$0.const$67
    );
    static final FunctionDescriptor const$99 = FunctionDescriptor.of(RuntimeHelper.POINTER,
        RuntimeHelper.POINTER,
        JAVA_FLOAT,
        JAVA_FLOAT
    );
    static final MethodHandle const$100 = RuntimeHelper.downcallHandle(
        "SkDocument_beginPage",
        constants$0.const$99
    );
    static final MethodHandle const$101 = RuntimeHelper.downcallHandle(
        "SkDocument_endPage",
        constants$0.const$62
    );
    static final MethodHandle const$102 = RuntimeHelper.downcallHandle(
        "SkCanvas_save",
        constants$0.const$62
    );
    static final FunctionDescriptor const$103 = FunctionDescriptor.ofVoid(
        RuntimeHelper.POINTER,
        JAVA_BOOLEAN,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT,
        RuntimeHelper.POINTER
    );
    static final MethodHandle const$104 = RuntimeHelper.downcallHandle(
        "SkCanvas_saveLayer",
        constants$0.const$103
    );
    static final MethodHandle const$105 = RuntimeHelper.downcallHandle(
        "SkCanvas_restore",
        constants$0.const$62
    );
    static final FunctionDescriptor const$106 = FunctionDescriptor.ofVoid(
        RuntimeHelper.POINTER,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT
    );
    static final MethodHandle const$107 = RuntimeHelper.downcallHandle(
        "SkCanvas_setMatrix",
        constants$0.const$106
    );
    static final FunctionDescriptor const$108 = FunctionDescriptor.ofVoid(
        RuntimeHelper.POINTER,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_BOOLEAN
    );
    static final MethodHandle const$109 = RuntimeHelper.downcallHandle(
        "SkCanvas_clipRect",
        constants$0.const$108
    );
    static final FunctionDescriptor const$110 = FunctionDescriptor.ofVoid(
        RuntimeHelper.POINTER,
        RuntimeHelper.POINTER,
        JAVA_BOOLEAN
    );
    static final MethodHandle const$111 = RuntimeHelper.downcallHandle(
        "SkCanvas_clipPath",
        constants$0.const$110
    );
    static final FunctionDescriptor const$112 = FunctionDescriptor.ofVoid(
        RuntimeHelper.POINTER,
        RuntimeHelper.POINTER,
        RuntimeHelper.POINTER
    );
    static final MethodHandle const$113 = RuntimeHelper.downcallHandle(
        "SkCanvas_drawPath",
        constants$0.const$112
    );
    static final FunctionDescriptor const$114 = FunctionDescriptor.ofVoid(
        RuntimeHelper.POINTER,
        JAVA_INT,
        JAVA_INT,
        JAVA_BYTE,
        JAVA_BYTE,
        RuntimeHelper.POINTER,
        RuntimeHelper.POINTER,
        JAVA_LONG,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_BYTE,
        RuntimeHelper.POINTER
    );
    static final MethodHandle const$115 = RuntimeHelper.downcallHandle(
        "SkCanvas_drawImage",
        constants$0.const$114
    );
    static final MethodHandle const$116 = RuntimeHelper.downcallHandle(
        "SkPaint_New",
        constants$0.const$53
    );
    static final MethodHandle const$117 = RuntimeHelper.downcallHandle(
        "SkPaint_delete",
        constants$0.const$62
    );
    static final FunctionDescriptor const$118 = FunctionDescriptor.ofVoid(
        RuntimeHelper.POINTER,
        JAVA_BOOLEAN
    );
    static final MethodHandle const$119 = RuntimeHelper.downcallHandle(
        "SkPaint_setAntiAlias",
        constants$0.const$118
    );
    static final MethodHandle const$120 = RuntimeHelper.downcallHandle(
        "SkPaint_setStroke",
        constants$0.const$118
    );
    static final FunctionDescriptor const$121 = FunctionDescriptor.ofVoid(
        RuntimeHelper.POINTER,
        JAVA_FLOAT,
        JAVA_BYTE,
        JAVA_BYTE,
        JAVA_FLOAT
    );
    static final MethodHandle const$122 = RuntimeHelper.downcallHandle(
        "SkPaint_setStrokeProperties",
        constants$0.const$121
    );
    static final FunctionDescriptor const$123 = FunctionDescriptor.ofVoid(
        RuntimeHelper.POINTER,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT,
        RuntimeHelper.POINTER
    );
    static final MethodHandle const$124 = RuntimeHelper.downcallHandle(
        "SkPaint_setColor",
        constants$0.const$123
    );
    static final FunctionDescriptor const$125 = FunctionDescriptor.ofVoid(
        RuntimeHelper.POINTER,
        JAVA_FLOAT
    );
    static final MethodHandle const$126 = RuntimeHelper.downcallHandle(
        "SkPaint_setAlpha",
        constants$0.const$125
    );
    static final FunctionDescriptor const$127 = FunctionDescriptor.ofVoid(
        RuntimeHelper.POINTER,
        JAVA_BYTE
    );
    static final MethodHandle const$128 = RuntimeHelper.downcallHandle(
        "SkPaint_setBlendMode",
        constants$0.const$127
    );
    static final FunctionDescriptor const$129 = FunctionDescriptor.ofVoid(
        RuntimeHelper.POINTER,
        RuntimeHelper.POINTER,
        JAVA_INT,
        JAVA_FLOAT
    );
    static final MethodHandle const$130 = RuntimeHelper.downcallHandle(
        "SkPaint_setDashPathEffect",
        constants$0.const$129
    );
    static final MethodHandle const$131 = RuntimeHelper.downcallHandle(
        "SkPaint_setShaderMaskFilter",
        constants$0.const$80
    );
    static final MethodHandle const$132 = RuntimeHelper.downcallHandle(
        "SkPaint_setShader",
        constants$0.const$80
    );
    static final MethodHandle const$133 = RuntimeHelper.downcallHandle(
        "SkPaint_setBlurImageFilter",
        constants$0.const$82
    );
    static final FunctionDescriptor const$134 = FunctionDescriptor.of(RuntimeHelper.POINTER,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT,
        RuntimeHelper.POINTER,
        RuntimeHelper.POINTER,
        RuntimeHelper.POINTER,
        JAVA_INT,
        JAVA_BYTE,
        JAVA_BYTE
    );
    static final MethodHandle const$135 = RuntimeHelper.downcallHandle(
        "SkGradientShader_MakeLinear",
        constants$0.const$134
    );
    static final FunctionDescriptor const$136 = FunctionDescriptor.of(RuntimeHelper.POINTER,
        JAVA_INT,
        JAVA_INT,
        JAVA_BYTE,
        JAVA_BYTE,
        RuntimeHelper.POINTER,
        RuntimeHelper.POINTER,
        JAVA_LONG,
        JAVA_BYTE,
        JAVA_BYTE,
        JAVA_BYTE,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT
    );
    static final MethodHandle const$137 = RuntimeHelper.downcallHandle(
        "SkImage_makeShader",
        constants$0.const$136
    );
}


